--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,11 +4,15 @@ server.port=8082
 
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://user-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/user-service/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
 
 spring.cloud.gateway.routes[1].id=auth-service
 spring.cloud.gateway.routes[1].uri=lb://auth-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+
+spring.cloud.gateway.routes[2].id=cart_service
+spring.cloud.gateway.routes[2].uri=lb://cart_service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/cart/**
 
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
