--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -14,6 +14,15 @@ spring.cloud.gateway.routes[2].id=cart_service
 spring.cloud.gateway.routes[2].uri=lb://cart_service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/cart/**
 
+spring.cloud.gateway.routes[3].id=order-service
+spring.cloud.gateway.routes[3].uri=lb://order-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/order/**
+
+spring.cloud.gateway.routes[4].id=product-service
+spring.cloud.gateway.routes[4].uri=lb://product-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/product/**
+
+
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
