--- a/cart_service/src/main/resources/application.properties
+++ b/cart_service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ eureka.instance.prefer-ip-address=true
 spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.transaction.jta.JtaAutoConfiguration
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
