--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -14,3 +14,6 @@ eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
