--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=product-service
 
-server.port=0
+server.port=8086
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/productservice_db
 spring.datasource.username=postgres
@@ -14,3 +14,6 @@ eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
