--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 #Eureka Server
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 eureka.instance.prefer-ip-address=true
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
