--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/product/**
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
