--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.cloud.gateway.routes[1].id=auth-service
 spring.cloud.gateway.routes[1].uri=lb://auth-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
 
-spring.cloud.gateway.routes[2].id=cart_service
-spring.cloud.gateway.routes[2].uri=lb://cart_service
+spring.cloud.gateway.routes[2].id=cart-service
+spring.cloud.gateway.routes[2].uri=lb://cart-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/cart/**
 
 spring.cloud.gateway.routes[3].id=order-service
