--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
